--- a/index.html
+++ b/index.html
@@ -76,6 +76,49 @@
                         </aside>
                     </section>
                 </section>
+                <section>
+                    <h1 style="margin: 1em auto;">Сказка ложь, да в ней намёк</h1>
+                    <aside class="notes">
+                        Но как говорят: "Сказка ложь, да в ней намёк". Так что давайте более объективно рассмотрим вопрос и ответим на несколько главных вопросов.
+                    </aside>
+                </section>
+                <section>
+                    <h1 style="margin: 1em auto;">Что?</h1>
+                    <aside class="notes">
+                        Нам нужна максимально гибкая система непрерывной интеграции.
+                    </aside>
+                </section>
+                <section>
+                    <section>
+                        <h1 style="margin: 1em auto;">Зачем?</h1>
+                        <aside class="notes">
+                            Несмотря на кажущуюся легкость это, на мой взгляд, самый сложный вопрос. Действительно, а зачем нам нужна эта самая гибкость?
+                        </aside>
+                    </section>
+                    <section>
+                        <h2 style="margin: 0.5em auto;">Причины:</h2>
+                        <ul>
+                            <li>высокая раздробленность системы</li>
+                            <li>применение широкого стека технологий</li>
+                            <li>интеграция в существующую инфраструктуру</li>
+                        </ul>
+                    </section>
+                </section>
+                <section>
+                    <section>
+                        <h1 style="margin: 1em auto;">Почему?</h1>
+                        <aside class="notes">
+                            К этому вопросу стоит подходить с такой стороны: Почему именно билдбот? Об этом мы с вами поговорм дальше.
+                        </aside>
+                    </section>
+                    <section>
+                        <h2>Buildbot — конструктор</h2>
+                        <img style="max-width: 50%;" src="images/lego-robot.jpeg" alt="Lego Robot"/>
+                        <aside class="notes">
+                            Любой более ли менее сложный проект имеет очень тонкую, а порой из-за сложившихся 
+                        </aside>
+                    </section>
+                </section>
             </div>
 
         </div>
