--- a/index.html
+++ b/index.html
@@ -77,47 +77,61 @@
                     </section>
                 </section>
                 <section>
-                    <h1 style="margin: 1em auto;">Сказка ложь, да в ней намёк</h1>
-                    <aside class="notes">
-                        Но как говорят: "Сказка ложь, да в ней намёк". Так что давайте более объективно рассмотрим вопрос и ответим на несколько главных вопросов.
-                    </aside>
-                </section>
-                <section>
-                    <h1 style="margin: 1em auto;">Что?</h1>
-                    <aside class="notes">
-                        Нам нужна максимально гибкая система непрерывной интеграции.
-                    </aside>
-                </section>
-                <section>
                     <section>
-                        <h1 style="margin: 1em auto;">Зачем?</h1>
+                        <h1 style="margin-top: 1.2em;">Что есть buildbot?</h1>
                         <aside class="notes">
-                            Несмотря на кажущуюся легкость это, на мой взгляд, самый сложный вопрос. Действительно, а зачем нам нужна эта самая гибкость?
+                            Не буду мучить вас лишними разглагольствованиями, а лучше сразу покажу что из себя герой моего сегодняшнего доклада представляет.
                         </aside>
                     </section>
                     <section>
-                        <h2 style="margin: 0.5em auto;">Причины:</h2>
-                        <ul>
-                            <li>высокая раздробленность системы</li>
-                            <li>применение широкого стека технологий</li>
-                            <li>интеграция в существующую инфраструктуру</li>
+                        <h2 style="margin-top: 1em;">Концепция фраемворка</h2>
+                        <ul style="font-size: 1.2em; line-height: 1.5;">
+                            <li class="fragment">бери только то, что нужно</li>
+                            <li class="fragment">проще расширять</li>
                         </ul>
+                        <aside class="notes">
+                        </aside>
+                    </section>
+                    <section>
+                        <h2 style="margin-top: 1em;">Конфиг на python</h2>
+                        <ul style="font-size: 1.2em; line-height: 1.5;">
+                            <li class="fragment">модульность</li>
+                            <li class="fragment">git (версионирование)</li>
+                            <li class="fragment">code review</li>
+                        </ul>
+                        <aside class="notes">
+                            Это может показаться диким, но в этом есть весьма большое преимущество.
+                            модульность - копипастить код больше не нужно
+                            git - можем откатиться, если что-то пошло не так
+                            code review - уменьшаем количество глупых ошибок
+                        </aside>
+                    </section>
+                </section>
+                <section>
+                    <h2>Tips and Tricks</h2>
+                    <img style="max-width: 50%;" src="images/lego-robot.jpeg" alt="Lego Robot"/>
+                    <aside class="notes">
+                        Пару интересных моментов
+                    </aside>
+                </section>
+                <section>
+                    <section>
+                        <h1 style="margin-top: 1.2em;">Только через мой git!</h1>
+                        <aside class="notes">
+                            История о том, как мы билдбот через код-ревью пускали
+                        </aside>
                     </section>
                 </section>
                 <section>
                     <section>
-                        <h1 style="margin: 1em auto;">Почему?</h1>
+                        <h1 style="margin-top: 1.2em;">Прощай, копипаста!</h1>
                         <aside class="notes">
-                            К этому вопросу стоит подходить с такой стороны: Почему именно билдбот? Об этом мы с вами поговорм дальше.
+                            История о том, как можно генерить сборки
                         </aside>
                     </section>
-                    <section>
-                        <h2>Buildbot — конструктор</h2>
-                        <img style="max-width: 50%;" src="images/lego-robot.jpeg" alt="Lego Robot"/>
-                        <aside class="notes">
-                            Любой более ли менее сложный проект имеет очень тонкую, а порой из-за сложившихся 
-                        </aside>
-                    </section>
+                </section>
+                <section>
+                    <h1 style="margin-top: 1.2em;">Конец</h1>
                 </section>
             </div>
 
