--- a/index.html
+++ b/index.html
@@ -106,6 +106,10 @@
                             code review - уменьшаем количество глупых ошибок
                         </aside>
                     </section>
+                    <section>
+                        <h3>Знать в лицо (buildbot.python.org/all/waterfall)</h3>
+                        <img style="max-width: 50%;" src="images/buildbot-python.png"/>
+                    </section>
                 </section>
                 <section>
                     <h2>Tips and Tricks</h2>
